test/parser/reject/pattern-unexpected-token.ptk
# expected: E1114

pattern a_word = `illegal`;

